--- a/Properties/Resources.ja-JP.resx
+++ b/Properties/Resources.ja-JP.resx
@@ -118,42 +118,42 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BufferSize" xml:space="preserve">
-    <value>BurrerSize</value>
+    <value>バッファ数</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>閉じる</value>
   </data>
   <data name="Communication" xml:space="preserve">
-    <value>Communication</value>
+    <value>通信</value>
   </data>
   <data name="CommunicationName" xml:space="preserve">
-    <value>Name</value>
+    <value>名称</value>
   </data>
   <data name="Exit" xml:space="preserve">
-    <value>Exit</value>
+    <value>終了</value>
   </data>
   <data name="IpAddress" xml:space="preserve">
-    <value>IpAddress</value>
+    <value>IPアドレス</value>
   </data>
   <data name="Port" xml:space="preserve">
-    <value>Port</value>
+    <value>ポート</value>
   </data>
   <data name="RententionDays" xml:space="preserve">
-    <value>RentensionDays</value>
+    <value>保存日数</value>
   </data>
   <data name="Save" xml:space="preserve">
-    <value>Save</value>
+    <value>保存</value>
   </data>
   <data name="SaveDirectory" xml:space="preserve">
-    <value>SaveDirectory</value>
+    <value>保存ディレクトリ</value>
   </data>
   <data name="Setting" xml:space="preserve">
-    <value>Setting</value>
+    <value>設定</value>
   </data>
   <data name="Update" xml:space="preserve">
-    <value>Update</value>
+    <value>更新</value>
   </data>
   <data name="Valid" xml:space="preserve">
-    <value>Valid</value>
+    <value>有効</value>
   </data>
 </root>
